--- a/static/style/style.css
+++ b/static/style/style.css
@@ -2,7 +2,7 @@
 body {
 	background-color: #f9f9f9;
 	margin-top: 5%;
-	max-width: 65%;
+	max-width: 100%;
 	margin: auto;
 	text-align: left;
 	background-repeat: no-repeat;
@@ -39,13 +39,17 @@ h2 {
 	transform: scale(1.3, 1.3);
 }
 
+.navbar-inverse .navbar-nav>li>a {
+	color: white;
+}
+
 .navbar-inverse {
 	background: rgb(42, 63, 84);
 	border-width: 0px;
 }
 
-.navbar-brand {
-	color: #fff!important;
+.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
+	background-color: #223344;
 }
 
 .btn-info {
@@ -161,5 +165,7 @@ table.dataTable tbody tr:nth-of-type(odd) {
 .leaflet-left .leaflet-control {
     background: rgba(255,255,255,0.6) !important;
     padding: 15px !important;
+		margin-left: 20px !important;
+		margin-bottom: 20px !important;
     border-radius: 10px !important;
 }
