--- a/templates/newDevice.html
+++ b/templates/newDevice.html
@@ -29,157 +29,64 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
 		</nav>
 
-		<div style="margin-top: 100px;">
-			<h1>Ajouter un équipement</h1>
-		</div>
-
-		<br>
-
-    <div style= "background-color: white; padding: 2px; border-radius: 10px; border: 1px solid grey; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-  		<div style= "padding: 15px; border-radius: 10px; margin-top: 0px;">
-          <div class="form-group">
-            <br>
-    				<d1>
-              <select class="form-control" id="street" required name="street" style="width: 49.5%; float: left;">
-                  <option value="none" disabled selected>Choisir une Rue...</option>
-                  <option value="other">Ajouter une Rue...</option>
-                {% for street in streets %}
-                  <option value="{{ street }}">{{ street }}</option>
-                {% endfor %}
-              </select>
-              <input required maxlength="25" class="form-control" placeholder="Nouvelle Rue..." id="streetInput" name="streetInput" style="display:none; width: 49.5%; float: right;"/>
-    				</d1>
-    			</div>
-        <div style= "background-color: white; padding: 0px; border-radius: 10px; border: 1px solid grey; margin-bottom: 20px; margin-top: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-          <div id="map" style="height: 500px; border-radius: 10px;"></div>
-        </div>
-        <div id="geolocAlert" class="alert alert-danger alert-dismissible" style='display:none;'>Veuillez géolocaliser l'équipement !
-          <button data-dismiss="alert" type="button" class="close" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div id="streetAlert" class="alert alert-danger alert-dismissible" style='display:none;'>Veuillez choisir une rue !
-          <button data-dismiss="alert" type="button" class="close" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div id="newStreetAlert" class="alert alert-danger alert-dismissible" style='display:none;'>Veuillez renseigner le nom de la nouvelle rue !
-          <button data-dismiss="alert" type="button" class="close" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-      <input id="submit" type=submit value="Sauvegarder" class="btn btn-success" style="margin-bottom: 0; margin-top: 0px; margin-left: 0;">
-      <input type=button onclick="window.location='/getEvents';" value="Retour" class="btn btn-warning" style="margin-bottom: 0; margin-top: 0px;">
-      <br>
-      <br>
-      <div id="successAlert" class="alert alert-success alert-dismissible" style='display:none;'>L'équipement a été créé avec succès !
-        <button data-dismiss="alert" type="button" class="close" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+    <div style="width: 65%; margin: auto; margin-top: 50px;">
+      <div style="margin-top: 100px;">
+        <h1>Ajouter un équipement</h1>
       </div>
-
-      {% if error %}
+      <br>
+      <div style= "background-color: white; padding: 2px; border-radius: 10px; border: 1px solid grey; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+    		<div style= "padding: 15px; border-radius: 10px; margin-top: 0px;">
+            <div class="form-group">
+              <br>
+      				<d1>
+                <select class="form-control" id="street" required name="street" style="width: 49.5%; float: left;">
+                    <option value="none" disabled selected>Choisir une Rue...</option>
+                    <option value="other">Ajouter une Rue...</option>
+                  {% for street in streets %}
+                    <option value="{{ street }}">{{ street }}</option>
+                  {% endfor %}
+                </select>
+                <input required maxlength="25" class="form-control" placeholder="Nouvelle Rue..." id="streetInput" name="streetInput" style="display:none; width: 49.5%; float: right;"/>
+      				</d1>
+      			</div>
+          <div style= "background-color: white; padding: 0px; border-radius: 10px; border: 1px solid grey; margin-bottom: 20px; margin-top: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+            <div id="map" style="height: 500px; border-radius: 10px;"></div>
+          </div>
+          <div id="geolocAlert" class="alert alert-danger alert-dismissible" style='display:none;'>Veuillez géolocaliser l'équipement !
+            <button data-dismiss="alert" type="button" class="close" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div id="streetAlert" class="alert alert-danger alert-dismissible" style='display:none;'>Veuillez choisir une rue !
+            <button data-dismiss="alert" type="button" class="close" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div id="newStreetAlert" class="alert alert-danger alert-dismissible" style='display:none;'>Veuillez renseigner le nom de la nouvelle rue !
+            <button data-dismiss="alert" type="button" class="close" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        <input id="submit" type=submit value="Sauvegarder" class="btn btn-success" style="margin-bottom: 0; margin-top: 0px; margin-left: 0;">
+        <input type=button onclick="window.location='/getEvents';" value="Retour" class="btn btn-warning" style="margin-bottom: 0; margin-top: 0px;">
         <br>
-        <p style="color: #ff3333;">{{error}}</p>
-      {% endif %}
+        <br>
+        <div id="successAlert" class="alert alert-success alert-dismissible" style='display:none;'>L'équipement a été créé avec succès !
+          <button data-dismiss="alert" type="button" class="close" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
 
+        {% if error %}
+          <br>
+          <p style="color: #ff3333;">{{error}}</p>
+        {% endif %}
+
+        </div>
     </div>
   </div>
 
+
 </body>
 
-
-<script>
-
-  //LEAFLET
-
-  var map = L.map('map').setView([48.8126508,2.3881197], 15);
-  var layer = L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png', {
-  });
-
-  var i = 0
-  var lat = 0
-  var lng = 0
-
-  map.on('click', onMapClick);
-
-  function onMapClick(e) {
-    if (i == 0) {
-      marker = new L.marker(e.latlng, {draggable:'true'});
-      var position = marker.getLatLng();
-      console.log(position.lat, position.lng)
-
-      marker.on('dragend', function(event){
-        var marker = event.target;
-        var position = marker.getLatLng();
-        marker.setLatLng(new L.LatLng(position.lat, position.lng),{draggable:'true'});
-        map.panTo(new L.LatLng(position.lat, position.lng))
-        lat = position.lat
-        long = position.lng
-        console.log(position.lat, position.lng)
-      });
-      map.addLayer(marker);
-      i = 1
-      lat = position.lat
-      long = position.lng
-    }
-  };
-
-  map.addLayer(layer);
-
-  $(document).ready( function() {
-        $('#submit').click(function() {
-            var street = $('#street').find(":selected").text();
-            var newStreet = $('#streetInput').val();
-            if (street == "Choisir une Rue...") {
-                $("#streetAlert").fadeTo(1500, 500).slideUp(500, function(){
-                $("#streetAlert").slideUp(500);
-              });
-              return;
-            } else if (street == "Ajouter une Rue...") {
-              if (!newStreet) {
-                $("#newStreetAlert").fadeTo(1500, 500).slideUp(500, function(){
-                  $("#newStreetAlert").slideUp(500);
-                });
-                return;
-              } else {
-                street = newStreet
-              }
-            }
-            try {
-              $.post(
-                "/newDevice",
-                { lat: lat, long: long, street: street }
-             ).done(function (reply) {
-                $('#reply').empty().append(reply);
-                $("#successAlert").fadeTo(1500, 500).slideUp(500, function(){
-                  $("#successAlert").slideUp(500);
-                  location.reload()
-                });
-             });
-           }
-           catch (err) {
-             $("#geolocAlert").fadeTo(1500, 500).slideUp(500, function(){
-               $("#geolocAlert").slideUp(500);
-             });
-           }
-        });
-        $('#street').change(function() {
-
-          var street = $('#street').find(":selected").text();
-          var streetInput = document.getElementById("streetInput");
-
-          if (street == "Ajouter une Rue...") {
-            if (streetInput.style.display === "none") {
-              streetInput.style.display = "block";
-            }
-          }
-          else {
-            if (streetInput.style.display === "block") {
-              streetInput.style.display = "none";
-            }
-          }
-        });
-  });
-
-  </script>
+<script type="text/javascript" src="../static/js/newDevice.js"></script>
