--- a/templates/admin.html
+++ b/templates/admin.html
@@ -21,61 +21,142 @@
 
 <body>
 
-		<nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light" role="navigation">
-      <a class="navbar-brand" href="/getEvents">Mon Parc</a>
-      <a class="navbar-brand" href="/admin">Alertes</a>
-      <a class="navbar-brand" href="/newDevice">Gérer mes équipements</a>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
-		</nav>
+    <nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light" role="navigation">
+      <ul class="nav navbar-nav">
+        <li><a href="/map">Mon Parc</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Configuration
+          <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a class="navbar-brand" href="/newDevice">Gérer mes équipements</a></li>
+            <li><a class="navbar-brand" href="/admin">Gérer mes alertes</a></li>
+          </ul>
+        </li>
+        <li><a href="/getEvents">Données</a></li>
+      </ul>
+    </nav>
 
-		<div style="margin-top: 150px;">
-			<h1>Configurer mes alertes</h1>
-		</div>
-
-    <br>
-
-    <div style= "background-color: white; padding: 2px; border-radius: 10px; border: 1px solid grey; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-  		<div style= "padding: 15px; border-radius: 10px; margin-top: 0px;">
-        <form action="{{ url_for('create_settings') }}" method="post" class="form" role="form">
-          <div class="form-group">
-            <label>Délai avant déclenchement du mode monitoring</label>
-            <br>
-    				<d1>
-              <select class="form-control" id="warning" required name="warning" style="width: 300px;">
-                <option {% if warning == 12 %} selected {% endif %} value="12">12 Heures</option>
-                <option {% if warning == 24 %} selected {% endif %} value="24">24 Heures</option>
-                <option {% if warning == 36 %} selected {% endif %} value="36">36 Heures</option>
-                <option {% if warning == 48 %} selected {% endif %} value="48">48 Heures</option>
-                <option {% if warning == 72 %} selected {% endif %} value="72">72 Heures</option>
-                <option {% if warning == 96 %} selected {% endif %} value="96">96 Heures</option>
-              </select>
-              <small style="font-size: 11px;">Par défaut, 48 heures</small>
-    				</d1>
-    			</div>
-          <div class="form-group">
-            <label>Délai avant le déclenchement du mode alerte</label>
-            <br>
-    				<d1>
-              <select class="form-control" id="alert" required name="alert" style="width: 300px;">
-                <option {% if alert == 12 %} selected {% endif %} value="12">12 Heures</option>
-                <option {% if alert == 24 %} selected {% endif %} value="24">24 Heures</option>
-                <option {% if alert == 36 %} selected {% endif %} value="36">36 Heures</option>
-                <option {% if alert == 48 %} selected {% endif %} value="48">48 Heures</option>
-                <option {% if alert == 72 %} selected {% endif %} value="72">72 Heures</option>
-                <option {% if alert == 96 %} selected {% endif %} value="96">96 Heures</option>
-              </select>
-              <small style="font-size: 11px;">Par défaut, 72 heures - doit être supérieur au seuil de déclenchement du monitoring</small>
-    				</d1>
-    			</div>
-  			<input id="save" type=submit value="Sauvegarder" class="btn btn-success" style="margin-bottom: 0; margin-top: 0px; margin-left: 0;">
-        <input type=button onclick="window.location='/getEvents';" value="Retour" class="btn btn-warning" style="margin-bottom: 0; margin-top: 0px;">
-        <br>
-        {% if error %}
+    <div style="width: 65%; margin: auto; margin-top: 50px;">
+      <div style="margin-top: 150px;">
+        <h1>Configurer mes alertes</h1>
+      </div>
+      <br>
+      <div style= "background-color: white; padding: 2px; border-radius: 10px; border: 1px solid grey; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+    		<div style= "padding: 15px; border-radius: 10px; margin-top: 0px;">
+            <div class="form-group">
+              <label>Délai avant déclenchement du mode monitoring</label>
+              <br>
+      				<d1>
+                <select class="form-control" id="warning" required name="warning" style="width: 300px;">
+                  <option {% if warning == 12 %} selected {% endif %} value="12">12 Heures</option>
+                  <option {% if warning == 24 %} selected {% endif %} value="24">24 Heures</option>
+                  <option {% if warning == 36 %} selected {% endif %} value="36">36 Heures</option>
+                  <option {% if warning == 48 %} selected {% endif %} value="48">48 Heures</option>
+                  <option {% if warning == 72 %} selected {% endif %} value="72">72 Heures</option>
+                </select>
+                <small style="font-size: 11px;">Par défaut, 48 heures</small>
+      				</d1>
+      			</div>
+            <div class="form-group">
+              <label>Délai avant le déclenchement du mode alerte</label>
+              <br>
+      				<d1>
+                <select class="form-control" id="alert" required name="alert" style="width: 300px;">
+                  <option {% if alert == 24 %} selected {% endif %} value="24">24 Heures</option>
+                  <option {% if alert == 36 %} selected {% endif %} value="36">36 Heures</option>
+                  <option {% if alert == 48 %} selected {% endif %} value="48">48 Heures</option>
+                  <option {% if alert == 72 %} selected {% endif %} value="72">72 Heures</option>
+                  <option {% if alert == 96 %} selected {% endif %} value="96">96 Heures</option>
+                </select>
+                <small style="font-size: 11px;">Par défaut, 72 heures - doit être supérieur au seuil de déclenchement du monitoring</small>
+      				</d1>
+      			</div>
+    			<input id="save" type=submit value="Sauvegarder" class="btn btn-success" style="margin-bottom: 0; margin-top: 0px; margin-left: 0;">
+          <input type=button onclick="window.location='/map';" value="Retour" class="btn btn-warning" style="margin-bottom: 0; margin-top: 0px;">
           <br>
-          <p style="color: #ff3333;">{{error}}</p>
-        {% endif %}
-  			</form>
-  		</div>
+          <br>
+          <div id="delayAlert" class="alert alert-danger alert-dismissible" style='display:none;'>Le seuil de déclenchement d'alerte doit être supérieur au seuil de déclenchement du monitoring !
+            <button data-dismiss="alert" type="button" class="close" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div id="successAlert" class="alert alert-success alert-dismissible" style='display:none;'>Vos préférences ont bien été enregistrées !
+            <button data-dismiss="alert" type="button" class="close" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          {% if error %}
+            <br>
+            <p style="color: #ff3333;">{{error}}</p>
+          {% endif %}
+    		</div>
+      </div>
     </div>
 
 </body>
+
+<script>
+
+  var warning = $('#warning').find(":selected").val();
+  var alert = $('#alert').find(":selected").val();
+  var save = true
+
+  $(document).ready( function() {
+        $('#warning').change(function() {
+            var warningVal = $('#warning').find(":selected").val();
+            warning = warningVal
+            if (alert <= warning) {
+                $("#delayAlert").fadeTo(1500, 500).slideUp(500, function(){
+                $("#delayAlert").slideUp(500);
+                save = false
+              });
+            }
+            else {
+              save = true
+            }
+        });
+        $('#alert').change(function() {
+            var alertVal = $('#alert').find(":selected").val();
+            alert = alertVal
+            if (alert <= warning) {
+              $("#delayAlert").fadeTo(1500, 500).slideUp(500, function(){
+              $("#delayAlert").slideUp(500);
+              save = false
+            });
+            return;
+            }
+            else {
+              save = true
+            }
+        });
+        $('#save').click(function() {
+          if (save == false) {
+            $("#delayAlert").fadeTo(1500, 500).slideUp(500, function(){
+              $("#delayAlert").slideUp(500);
+            });
+            save = true
+            return;
+          }
+          else {
+            try {
+              $.post(
+                "/admin",
+                { warning: warning, alert: alert }
+             ).done(function (reply) {
+                $('#reply').empty().append(reply);
+                $("#successAlert").fadeTo(1500, 500).slideUp(500, function(){
+                  $("#successAlert").slideUp(500);
+                  location.reload()
+                });
+             });
+            }
+            catch (err) {
+             $("#delayAlert").fadeTo(1500, 500).slideUp(500, function(){
+               $("#delayAlert").slideUp(500);
+             });
+            }
+          }
+        });
+      });
+
+</script>
