--- a/templates/newDevice.html
+++ b/templates/newDevice.html
@@ -22,12 +22,20 @@
 
 <body>
 
-		<nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light" role="navigation">
-      <a class="navbar-brand" href="/getEvents">Mon Parc</a>
-      <a class="navbar-brand" href="/admin">Alertes</a>
-      <a class="navbar-brand" href="/newDevice">Gérer mes équipements</a>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
-		</nav>
+    <nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light" role="navigation">
+      <ul class="nav navbar-nav">
+        <li><a href="/map">Mon Parc</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Configuration
+          <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a class="navbar-brand" href="/newDevice">Gérer mes équipements</a></li>
+            <li><a class="navbar-brand" href="/admin">Gérer mes alertes</a></li>
+          </ul>
+        </li>
+        <li><a href="/getEvents">Données</a></li>
+      </ul>
+    </nav>
 
     <div style="width: 65%; margin: auto; margin-top: 50px;">
       <div style="margin-top: 100px;">
@@ -89,4 +97,124 @@
 
 </body>
 
-<script type="text/javascript" src="../static/js/newDevice.js"></script>
+<script>
+
+  //LEAFLET
+  var map = L.map('map', { zoomControl:false }).setView([48.8126508,2.3881197], 15);
+  var layer = L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png', {
+  });
+
+  var greyIcon = L.icon({
+      iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-grey.png',
+      shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+
+      iconSize:     [25, 41],
+      shadowSize:   [41, 41],
+      iconAnchor:   [12, 41],
+      shadowAnchor: [4, 62],
+      popupAnchor:  [0, -50]
+  });
+
+  var greenIcon = L.icon({
+      iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-green.png',
+      shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+
+      iconSize:     [25, 41],
+      shadowSize:   [41, 41],
+      iconAnchor:   [12, 41],
+      shadowAnchor: [4, 62],
+      popupAnchor:  [0, -50]
+  });
+
+  {% for device in devices %}
+
+      L.marker([{{device.latitude}},{{device.longitude}}], {icon: greyIcon}).addTo(map)
+
+  {% endfor %}
+
+  var i = 0
+  var lat = 0
+  var lng = 0
+
+  map.on('click', onMapClick);
+
+  function onMapClick(e) {
+    if (i == 0) {
+      marker = new L.marker(e.latlng, {draggable:'true', icon: greenIcon});
+      var position = marker.getLatLng();
+      console.log(position.lat, position.lng)
+
+      marker.on('dragend', function(event){
+        var marker = event.target;
+        var position = marker.getLatLng();
+        marker.setLatLng(new L.LatLng(position.lat, position.lng),{draggable:'true'});
+        map.panTo(new L.LatLng(position.lat, position.lng))
+        lat = position.lat
+        long = position.lng
+        console.log(position.lat, position.lng)
+      });
+      map.addLayer(marker);
+      i = 1
+      lat = position.lat
+      long = position.lng
+    }
+  };
+
+  map.addLayer(layer);
+
+  $(document).ready( function() {
+        $('#submit').click(function() {
+            var street = $('#street').find(":selected").text();
+            var newStreet = $('#streetInput').val();
+            if (street == "Choisir une Rue...") {
+                $("#streetAlert").fadeTo(1500, 500).slideUp(500, function(){
+                $("#streetAlert").slideUp(500);
+              });
+              return;
+            } else if (street == "Ajouter une Rue...") {
+              if (!newStreet) {
+                $("#newStreetAlert").fadeTo(1500, 500).slideUp(500, function(){
+                  $("#newStreetAlert").slideUp(500);
+                });
+                return;
+              } else {
+                street = newStreet
+              }
+            }
+            try {
+              $.post(
+                "/newDevice",
+                { lat: lat, long: long, street: street }
+             ).done(function (reply) {
+                $('#reply').empty().append(reply);
+                $("#successAlert").fadeTo(1500, 500).slideUp(500, function(){
+                  $("#successAlert").slideUp(500);
+                  location.reload()
+                });
+             });
+           }
+           catch (err) {
+             $("#geolocAlert").fadeTo(1500, 500).slideUp(500, function(){
+               $("#geolocAlert").slideUp(500);
+             });
+           }
+        });
+        $('#street').change(function() {
+
+          var street = $('#street').find(":selected").text();
+          var streetInput = document.getElementById("streetInput");
+
+          if (street == "Ajouter une Rue...") {
+            if (streetInput.style.display === "none") {
+              streetInput.style.display = "block";
+            }
+          }
+          else {
+            if (streetInput.style.display === "block") {
+              streetInput.style.display = "none";
+            }
+          }
+        });
+  });
+
+</script>
