--- a/static/style/style.css
+++ b/static/style/style.css
@@ -181,11 +181,82 @@ table.dataTable tbody tr:nth-of-type(odd) {
 		box-shadow: 0 1px 5px rgba(0,0,0,0.5) !important;
 }
 
-.leaflet-top leaflet-left {
+.leaflet-top .leaflet-left {
 	box-shadow: 0 1px 5px rgba(0,0,0,0) !important;
+}
+
+.leaflet-right {
+	display: none !important;
 }
 
 .leaflet-bar {
 	box-shadow: 0 1px 5px rgba(0,0,0,0.0) !important;
 	margin-top: 30px !important;
+}
+
+/* switch */
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+	margin: 0 10px 15px 10px;
+	padding-top: 5px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #CB2940;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #5cb85c;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #5cb85c;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
