--- a/templates/home.html
+++ b/templates/home.html
@@ -29,6 +29,7 @@
 
   <nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light" role="navigation">
     <ul class="nav navbar-nav">
+      <li><img src="/static/images/logo.png" style="height: 50px;"></img></li>
       <li><a href="/map">Mon Parc</a></li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Configuration
@@ -42,7 +43,7 @@
     </ul>
   </nav>
 
-  <div style= "background-color: white; padding: 0px; border-radius: 0px; border-top: 1px solid grey; margin-top: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+  <div style= "background-color: white; padding: 0px; border-radius: 0px; margin-top: 50px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div id="map" style="height: 957px; border-radius: 0px;"></div>
   </div>
 
