--- a/templates/newDevice.html
+++ b/templates/newDevice.html
@@ -24,6 +24,7 @@
 
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light" role="navigation">
       <ul class="nav navbar-nav">
+        <li><img src="/static/images/logo.png" style="height: 50px;"></img></li>
         <li><a href="/map">Mon Parc</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Configuration
@@ -42,7 +43,7 @@
         <h1>Ajouter un équipement</h1>
       </div>
       <br>
-      <div style= "background-color: white; padding: 2px; border-radius: 10px; border: 1px solid grey; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+      <div style= "background-color: white; padding: 2px; border-radius: 10px; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     		<div style= "padding: 15px; border-radius: 10px; margin-top: 0px;">
             <br>
               OFF
@@ -83,8 +84,6 @@
           </div>
         <input id="submit" type=submit value="Sauvegarder" class="btn btn-success" style="margin-bottom: 0; margin-top: 0px; margin-left: 0;">
         <input type=button onclick="window.location='/map';" value="Retour" class="btn btn-warning" style="margin-bottom: 0; margin-top: 0px;">
-        <br>
-        <br>
         <div id="successAlert" class="alert alert-success alert-dismissible" style='display:none;'>L'équipement a été ajouté avec succès !
           <button data-dismiss="alert" type="button" class="close" aria-label="Close">
             <span aria-hidden="true">&times;</span>
