--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1,6 +1,6 @@
 
 body {
-	background-color: #f9f9f9;
+	background: linear-gradient(0deg,rgba(255,255,255,0.5),rgba(255,255,255,0.7),rgba(255,255,255,0.9)), url(../images/earthNight2.jpg);
 	margin-top: 5%;
 	max-width: 100%;
 	margin: auto;
@@ -21,6 +21,17 @@ h2 {
  color: #383737;
  text-align: center;
  font-size: 150%;
+}
+
+.nav-tabs>li>a {
+	color: black !important;
+	background-color: rgba(255,255,255,0.5);
+}
+
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+	border-width: 1px 1px 0 1px;
+	border-color: grey;
+	background-color: white !important;
 }
 
 .forms {
@@ -44,12 +55,14 @@ h2 {
 }
 
 .navbar-inverse {
-	background: rgb(42, 63, 84);
+	/* background: rgba(255,255,255,0.7); */
 	border-width: 0px;
+	background: linear-gradient(45deg, #000 5%, rgba(255,255,255,0.7) 40%);
 }
 
 .navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
-	background-color: #223344;
+	background-color: rgba(255,255,255,1);
+	color: black;
 }
 
 .navbar-brand {
@@ -58,8 +71,9 @@ h2 {
 	font-size: 14px;
 }
 
-.navbar-brand:hover {
-	color: grey !important;
+.navbar-inverse .navbar-nav>li>a:hover {
+	color:black;
+	background-color: rgba(255,255,255,1);
 }
 
 .btn-info {
@@ -259,4 +273,17 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+/* tabs */
+
+.nav-tabs {
+	border: 0px !important;
+	padding-left: 70px !important;
+}
+
+/* alerts */
+
+.alert {
+	margin-top: 15px;
 }
