--- a/templates/admin.html
+++ b/templates/admin.html
@@ -23,6 +23,7 @@
 
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light" role="navigation">
       <ul class="nav navbar-nav">
+        <li><img src="/static/images/logo.png" style="height: 50px;"></img></li>
         <li><a href="/map">Mon Parc</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Configuration
@@ -41,13 +42,13 @@
         <h1>Configurer mes alertes</h1>
       </div>
       <br>
-      <div style= "background-color: white; padding: 2px; border-radius: 10px; border: 1px solid grey; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+      <div style= "background-color: white; padding: 2px; border-radius: 10px; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     		<div style= "padding: 15px; border-radius: 10px; margin-top: 0px;">
-            <div class="form-group">
+            <div class="form-group" style="width: 50%; float: left;">
               <label>Délai avant déclenchement du mode monitoring</label>
               <br>
       				<d1>
-                <select class="form-control" id="warning" required name="warning" style="width: 300px;">
+                <select class="form-control" id="warning" required name="warning" style="width: 95%;">
                   <option {% if warning == 12 %} selected {% endif %} value="12">12 Heures</option>
                   <option {% if warning == 24 %} selected {% endif %} value="24">24 Heures</option>
                   <option {% if warning == 36 %} selected {% endif %} value="36">36 Heures</option>
@@ -57,11 +58,11 @@
                 <small style="font-size: 11px;">Par défaut, 48 heures</small>
       				</d1>
       			</div>
-            <div class="form-group">
+            <div class="form-group" style="width: 50%; float: left;">
               <label>Délai avant le déclenchement du mode alerte</label>
               <br>
       				<d1>
-                <select class="form-control" id="alert" required name="alert" style="width: 300px;">
+                <select class="form-control" id="alert" required name="alert" style="width: 100%;">
                   <option {% if alert == 24 %} selected {% endif %} value="24">24 Heures</option>
                   <option {% if alert == 36 %} selected {% endif %} value="36">36 Heures</option>
                   <option {% if alert == 48 %} selected {% endif %} value="48">48 Heures</option>
@@ -73,8 +74,6 @@
       			</div>
     			<input id="save" type=submit value="Sauvegarder" class="btn btn-success" style="margin-bottom: 0; margin-top: 0px; margin-left: 0;">
           <input type=button onclick="window.location='/map';" value="Retour" class="btn btn-warning" style="margin-bottom: 0; margin-top: 0px;">
-          <br>
-          <br>
           <div id="delayAlert" class="alert alert-danger alert-dismissible" style='display:none;'>Le seuil de déclenchement d'alerte doit être supérieur au seuil de déclenchement du monitoring !
             <button data-dismiss="alert" type="button" class="close" aria-label="Close">
               <span aria-hidden="true">&times;</span>
